--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,7 +43,7 @@ body {
     }
 
     #init {
-        padding-bottom: 1em;
+        overflow: hidden;
     }
 
     #links {
@@ -66,6 +66,7 @@ body {
         background-color: #25515b;
         min-height: 50px;
         color: white;
+        margin-top: 1em;
         align-content: center;
         text-align: center;
         z-index: 1;
@@ -160,58 +161,8 @@ body {
 article {
     position: relative;
     z-index: 2;
-    width: 80%;
+    width: 85%;
     margin: 0 auto;
-}
-
-.pick-gallery-mode {
-    width: 80%;
-    margin: 0 auto;
-    p{
-        text-align: center;
-        color: #25515b;
-        font-style: italic;
-        font-size: 2.5em;
-    }
-    .gallery-choices {
-        margin-top: 20px;
-        display: flex;
-        border: 1px solid #25515b;
-        width: fit-content;
-        height: 100%;
-        margin: 0 auto;
-        margin-bottom: 20px;
-        justify-content: center;
-        label {
-            font-size: 2em;
-            font-style: italic;
-            text-decoration: none;
-            color: #25515b;
-            padding: 10px;
-            border: none;
-            height: 80%;
-            background-color: white;
-
-            &.left {
-                border-right: 1px solid #25515b;
-            }
-        }
-        input[type=radio]{
-            opacity: 0; position:absolute; width:0;
-            margin-right: 0;
-            height: 0;
-        }
-        label:hover {
-            cursor: pointer;
-            background-color: #92A8AD;
-            color: #FAF5C5;
-        }
-    }
-}
-
-.gallery {
-    //display: flex;
-    //align-items: stretch;
 }
 
 #signature-heading {
